--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images.jpeg');
+    background-image: url('IMG_20241027_185745_352.jpg');
     background-size: cover;
     background-position: center;
     margin: 0;
